RSRVR-20 fix client-native
The reflection configuration etc is generated by:
java -agentlib:native-image-agent=config-output-dir=agent-output \
 -jar client/target/reservoir-client-fat.jar --source bib1
 --xsl xsl/localid.xsl client/src/test/resources/record10.xml
This creates reachability-metadata.json which is then stored in the
"META-INF" location for the client.